--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "prettier": "^1.19.1",
+    "svg-sprite-loader": "^4.2.2",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   }
