--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vue-router": "^3.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.3",
@@ -32,6 +31,7 @@
     "prettier": "^1.19.1",
     "svg-sprite-loader": "^4.2.2",
     "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.1.3"
   }
 }
