--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.2.2",
+    "js-cookie": "^2.2.1",
     "js-sha1": "^0.6.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
